Refactored the adding of items

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="checklist-wrapper">
   <header>
     <div class="input-group">
-      <input type="text" ng-model="main.newItem.text"/>
+      <input type="text" ng-model="main.newItemText"/>
       <button class="button add-item" ng-click="main.addItem()">Add</button>
     </div>
   <section>
