Start of SCSS work, adds reset and some base components & mixins

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="checklist-wrapper">
+<div class="checklist-container">
   <header>
     <div class="input-group">
       <input type="text" ng-model="main.newItemText"/>
