--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,2 +1,27 @@
+//Colour Palette
+$base-colour-palette: (
+  'grey'  : rgb(204, 204, 204),
+  'white' : rgb(250, 250, 250)
+);
+
+//Font Display sizes
+$displays: (
+  small: (
+    font-size: 13px,
+    unit: 13px * 1.5,
+    scale: 1.25
+  ),
+  medium: (
+    font-size: 14px,
+    unit: 15px * 1.4,
+    scale: 1.3
+  ),
+  large: (
+    font-size: 16px,
+    unit: 16px * 1.5,
+    scale: 1.4
+  )
+);
+
 //Generic breakpoints
 $smartphone-max-width: 550px;
