--- a/app/styles/components/checklist-container.scss
+++ b/app/styles/components/checklist-container.scss
@@ -1,5 +1,8 @@
+$checklist-bg-colour: colour('white', 1);
+
 .checklist-container {
   padding: spacing(1);
-  border: 1px solid;
+  border: 1px solid colour('grey', -2);
   text-align: center;
+  background: $checklist-bg-colour;
 }
