Change to styles, font-size seemed to be causing issues. Abandoned a fix at this stage

--- a/app/styles/base.scss
+++ b/app/styles/base.scss
@@ -1,5 +1,10 @@
 //Things needed everywhere
 @import 'reset';
+
+@import 'functions/pow';
+@import 'functions/font-sizing';
+
 @import 'mixins/box-sizing';
-@import 'mixins/measures';
+@import 'mixins/font-size';
 @import 'mixins/colour';
+@import 'mixins/media-queries';
