Annoyingly, using compass is causing global imports to be ignored and thus mixins not working. Enough of this, on to more interesting things...

--- a/app/styles/components/checklist-container.scss
+++ b/app/styles/components/checklist-container.scss
@@ -1,3 +1,6 @@
+@import 'variables';
+@import 'mixins/media-queries';
+
 $checklist-bg-colour: colour('white', 1);
 $empty-list-colour: colour('grey', 1);
 
