--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,7 +8,9 @@
     <div class="checklist-wrapper">
       <checklist-item
         item="item"
-        ng-repeat="item in main.items">
+        ng-repeat="item in main.items"
+        editable="main.editable"
+        >
       </checklist-item>
       <span class="checklist-empty" ng-if="!main.items.length">
         Get started with a checklist!
@@ -20,8 +22,11 @@
       {{main.items.length}} items
     </span>
     <button
-      class="button"
+      class="button save-list"
       ng-show="main.items.length"
-      ng-click="main.saveList()">Save</button>
+      ng-click="main.saveItems()">Save</button>
+    <button
+      ng-click="main.toggleEditable()"
+      class="button edit-list">Edit</button>
   </footer>
 </div>
