--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,6 +4,7 @@
       <input type="text" ng-model="main.newItemText"/>
       <button class="button add-item" ng-click="main.addItem()">Add</button>
     </div>
+  </header>
   <section>
     <div class="checklist-wrapper">
       <checklist-item
