--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,6 +7,7 @@
 @import 'mixins/box-sizing';
 @import 'mixins/font-size';
 @import 'mixins/colour';
+@import 'mixins/button';
 
 //Components
 @import 'components/checklist-container';
