--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,7 +1,11 @@
 //Colour Palette
 $base-colour-palette: (
-  'grey'  : rgb(204, 204, 204),
-  'white' : rgb(250, 250, 250)
+  'light-grey': rgb(238, 238, 238),
+  'white' : rgb(250, 250, 250),
+  'blue': rgb(3, 169, 244),
+  'accent-blue': rgb(64, 196, 255),
+  'green': rgb(90,241, 88),
+  'red': #C00
 );
 
 //Font Display sizes
