Adds title to a checklist item

--- a/app/scripts/templates/checklist-item.html
+++ b/app/scripts/templates/checklist-item.html
@@ -1,4 +1,5 @@
 <div class="checklist-item-wrapper" ng-class="{completed: item.completed}">
+  <div class="checklist-item-title">{{item.title}}</div>
   <div class="checklist-item-text">{{item.text}}</div>
   <div class="checklist-item-toggler">
     <input type="checkbox" ng-model="item.completed" />
