--- a/app/scripts/templates/checklist-item.html
+++ b/app/scripts/templates/checklist-item.html
@@ -1,10 +1,10 @@
 <div class="checklist-item-wrapper" ng-class="{completed: item.completed}">
+  <div class="checklist-item-toggler">
+    <input type="checkbox" ng-model="item.completed"/>
+  </div>
   <div class="checklist-item-title">{{item.title}}</div>
   <div class="checklist-item-text">{{item.text}}</div>
-  <div class="checklist-item-toggler">
-    <input type="checkbox" ng-model="item.completed" />
-  </div>
   <div class="checklist-item-remove" ng-if="editable">
-    <button class="remove-button" ng-click="removeItem()">Remove</button>
+    <button class="remove-button" ng-click="remove(item)">Remove</button>
   </div>
 </div>
