--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,6 +8,7 @@
 @import 'mixins/font-size';
 @import 'mixins/colour';
 @import 'mixins/button';
+@import 'mixins/inputs';
 
 //Components
 @import 'components/checklist-container';
