--- a/app/views/main.html
+++ b/app/views/main.html
@@ -8,7 +8,7 @@
       <label for="new-item-text">Text: </label>
       <textarea ng-model="main.newItem.text"></textarea>
     </div>
-    <button class="button add-item" ng-click="main.addItem()">Add</button>
+    <button class="button add-item" ng-click="main.addItem()">Add Item</button>
   </header>
   <section>
     <div class="checklist-wrapper">
