--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,6 +1,7 @@
 //Colour Palette
 $base-colour-palette: (
   'light-grey': rgb(238, 238, 238),
+  'dark-grey': rgb(55,55,55),
   'white' : rgb(250, 250, 250),
   'blue': rgb(3, 169, 244),
   'accent-blue': rgb(64, 196, 255),
@@ -29,3 +30,4 @@ $displays: (
 
 //Generic breakpoints
 $smartphone-max-width: 550px;
+$tablet-max-width: 1000px;
