Begin componentisation of the checklist

--- a/app/styles/components/checklist-container.scss
+++ b/app/styles/components/checklist-container.scss
@@ -11,7 +11,7 @@ $input-bg: white;
 $input-text: colour('dark-grey', -3);
 $label-colour: colour('white',3);
 
-.checklist-container {
+.checklist {
   margin: 0 auto;
   max-width: 90vw;
   border: 1px solid colour('light-grey', -2);
