--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="checklist-container">
+<div class="checklist">
   <header>
     <div class="input-group">
       <label for="new-item-title">Title: </label>
