--- a/app/views/view.html
+++ b/app/views/view.html
@@ -1,6 +1,7 @@
-<section class="checklist-container">
+<checklist items="viewList.items" editable="false"></checklist>
+<!-- <section class="checklist-container">
   <div class="checklist-wrapper">
     <checklist-item item="item"
       ng-repeat="item in viewList.items" editable="false"></checklist-item>
   </div>
-</section>
+</section> -->
