--- a/app/scripts/templates/checklist-item.html
+++ b/app/scripts/templates/checklist-item.html
@@ -8,8 +8,12 @@
       <div class="checklist-item-text">{{item.text}}</div>
     </div>
     <div ng-if="editable">
-      <input type="text" ng-model="item.title" />
-      <textarea ng-model="item.text"></textarea>
+      <div class="input-group">
+        <input type="text" ng-model="item.title" />
+      </div>
+      <div class="input-group">
+        <textarea ng-model="item.text"></textarea>
+      </div>
     <div class="checklist-item-actions">
       <button class="remove-button" ng-click="remove(item)">Remove</button>
     </div>
