Moved logic from mainctrl into checklist controller

--- a/app/scripts/templates/checklist.html
+++ b/app/scripts/templates/checklist.html
@@ -25,7 +25,7 @@
       <a ng-href="#/view"
         class="button save-list">View</a>
         <button
-        ng-click="checklist.toggleEditable()"
+        ng-click="checklist.toggleUpdateable()"
         class="button edit-list">Edit</button>
     </div>
   </footer>
