Using a checklist in the main view

--- a/app/scripts/templates/checklist.html
+++ b/app/scripts/templates/checklist.html
@@ -12,7 +12,7 @@
   </header>
   <div class="checklist-wrapper">
     <checklist-item item="item"
-      ng-repeat="item in checklist.items" editable="checklist.editable">
+      ng-repeat="item in checklist.items" editable="checklist.updateable">
     </checklist-item>
   </div>
   <footer class="checklist-footer" ng-show="checklist.items.length">
