--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,45 +1,1 @@
-<div class="checklist">
-  <header>
-    <div class="input-group">
-      <label for="new-item-title">Title: </label>
-      <input type="text" ng-model="main.newItem.title"/>
-    </div>
-    <div class="input-group">
-      <label for="new-item-text">Text: </label>
-      <textarea ng-model="main.newItem.text"></textarea>
-    </div>
-    <button class="button add-item" ng-click="main.addItem()">Add Item</button>
-  </header>
-  <section>
-    <div class="checklist-wrapper">
-      <button
-        class="button remove-all-button"
-        ng-show="main.editable"
-        ng-click="main.removeAllItems()">
-        Remove All
-      </button>
-      <checklist-item
-        item="item"
-        ng-repeat="item in main.items"
-        editable="main.editable"
-        remove="main.removeListItem(item)"
-        >
-      </checklist-item>
-      <span class="checklist-empty" ng-if="!main.items.length">
-        Get started with a checklist!
-      </span>
-    </div>
-  </section>
-  <footer ng-show="main.items.length">
-    <span class="checklist-total" ng-if="main.items.length">
-      {{main.items.length}} items
-    </span>
-    <div class="actions-wrapper" >
-      <a ng-href="#/view"
-        class="button save-list">View</a>
-        <button
-        ng-click="main.toggleEditable()"
-        class="button edit-list">Edit</button>
-    </div>
-  </footer>
-</div>
+<checklist items="main.items" editable="true"></checklist>
