Adds New list button with confirm popup

--- a/app/scripts/templates/checklist.html
+++ b/app/scripts/templates/checklist.html
@@ -32,7 +32,7 @@
       <button
         class="button new-list"
         ng-click="checklist.createNew()">
-        New
+        New List
       </button>
     </div>
   </footer>
